# scraping_diarios

./: README.md  pyproject.toml
diarios_chile/: scrapy.cfg
diarios_chile/diarios_chile/: items.py  middlewares.py  pipelines.py  settings.py
diarios_chile/diarios_chile/spiders/: biobiochile.py  pruebas.py
